--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^0.9.0",
     "@prisma/client": "^6.16.2",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.2.3",
     "@types/jsonwebtoken": "^9.0.10",
     "better-auth": "^1.3.23",
@@ -20,7 +23,11 @@
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-lite-youtube-embed": "^2.5.6",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "ws": "^8.18.3",
+    "youtube-player": "^5.6.0",
     "youtube-search-api": "^2.0.1",
     "zod": "^4.1.11"
   },
