--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.2.3",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/yt-search": "^2.10.3",
     "axios": "^1.12.2",
     "better-auth": "^1.3.23",
+    "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "jsonwebtoken": "^9.0.2",
@@ -30,6 +32,7 @@
     "ws": "^8.18.3",
     "youtube-player": "^5.6.0",
     "youtube-search-api": "^2.0.1",
+    "yt-search": "^2.13.1",
     "zod": "^4.1.11"
   },
   "devDependencies": {
