--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
+    "googleapis": "^165.0.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.544.0",
     "motion-primitives": "^0.1.0",
